@@ -1,0 +1,34 @@
+/*
+ * The internal fuse header
+ *
+ * Copyright (c) 2011, Joachim Metz <jbmetz@users.sourceforge.net>
+ *
+ * Refer to AUTHORS for acknowledgements.
+ *
+ * This software is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This software is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this software.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#if !defined( _BDETOOLS_FUSE_H )
+#define _BDETOOLS_FUSE_H
+
+#include <common.h>
+
+#if defined( HAVE_FUSE_H )
+#define FUSE_USE_VERSION	26
+
+#include <fuse.h>
+#endif
+
+#endif
+
