@@ -29,10 +29,7 @@
 #include <libcstring.h>
 #include <liberror.h>
 
-#if defined( HAVE_FUSE_H )
-#include <fuse.h>
-#endif
-
+#include "bdetools_fuse.h"
 #include "bdetools_libbde.h"
 
 #if defined( __cplusplus )
@@ -85,28 +82,28 @@ int mount_handle_get_size(
 
 #if defined( HAVE_FUSE_H )
 
-static int mount_handle_fuse_open(
-            const char *path,
-            struct fuse_file_info *file_info );
+int mount_handle_fuse_open(
+     const char *path,
+     struct fuse_file_info *file_info );
 
-static int mount_handle_fuse_read(
-            const char *path,
-            char *buffer,
-            size_t size,
-            off_t offset,
-            struct fuse_file_info *file_info );
+int mount_handle_fuse_read(
+     const char *path,
+     char *buffer,
+     size_t size,
+     off_t offset,
+     struct fuse_file_info *file_info );
 
-static int mount_handle_fuse_readdir(
-            const char *path,
-            void *buffer,
-            fuse_fill_dir_t filler,
-            off_t offset,
-            struct fuse_file_info *file_info );
+int mount_handle_fuse_readdir(
+     const char *path,
+     void *buffer,
+     fuse_fill_dir_t filler,
+     off_t offset,
+     struct fuse_file_info *file_info );
 
-static int mount_handle_fuse_fgetattr(
-            const char *path,
-            struct stat *stat_info,
-            struct fuse_file_info *file_info );
+int mount_handle_fuse_fgetattr(
+     const char *path,
+     struct stat *stat_info,
+     struct fuse_file_info *file_info );
 
 #endif /* defined( HAVE_FUSE_H ) */
 
